Fix: point Netlify build to ad-dashboard/public and functions

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,8 @@
 [build]
-  functions = "functions/"
-  publish = "public/"
+  functions = "ad-dashboard/functions"
+  publish = "ad-dashboard/public"
 
 [dev]
   framework = "#static"
-  publish = "public"
+  publish = "ad-dashboard/public"
   port = 8888
