--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "seller-dashboard",
   "version": "1.0.0",
+  "description": "A unified dashboard for e-commerce sellers.",
+  "main": "index.js",
   "scripts": {
-    "dev": "vercel dev",
-    "build": "echo 'Static build handled by Vercel'",
-    "start": "vercel dev"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@clerk/clerk-sdk-node": "4.12.20",
-    "@clerk/clerk-js": "^4.73.1",
-    "node-fetch": "^3.3.2"
-  }
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^17.2.2",
+    "jsonwebtoken": "^8.5.1",
+    "node-fetch": "^2.6.7"
+  },
+  "author": "",
+  "license": "ISC"
 }
